--- a/app/components/main/Main.css
+++ b/app/components/main/Main.css
@@ -3,5 +3,5 @@
 }
 .stroke1 {
   -webkit-text-stroke: 0.1px rgba(153, 153, 153, 1);
-  -webkit-text-fill-color: #black;
+  -webkit-text-fill-color: black;
 }
