--- a/app/components/main/Main.css
+++ b/app/components/main/Main.css
@@ -5,3 +5,11 @@
   -webkit-text-stroke: 0.1px rgba(153, 153, 153, 1);
   -webkit-text-fill-color: black;
 }
+
+.section {
+  @apply h-[100dvh] bg-hero1 bg-cover bg-no-repeat bg-semiCenter1 mix-blend-normal -z-10;
+
+  &_fadedbg {
+    @apply h-full w-full absolute bg-slate-900 bg-opacity-50 z-0;
+  }
+}
