--- a/app/components/main/Main.css
+++ b/app/components/main/Main.css
@@ -10,6 +10,6 @@
   @apply h-[100dvh] bg-hero1 bg-cover bg-no-repeat bg-semiCenter1 mix-blend-normal -z-10;
 
   &_fadedbg {
-    @apply h-full w-full absolute bg-slate-900 bg-opacity-50 z-0;
+    @apply h-[100dvh] w-full absolute bg-slate-900 bg-opacity-50 z-0;
   }
 }
