--- a/app/components/main/Main.css
+++ b/app/components/main/Main.css
@@ -7,7 +7,7 @@
 }
 
 .section {
-  @apply h-[100dvh] bg-hero1 bg-semiCenter1 bg-no-repeat  mix-blend-normal;
+  @apply h-[100dvh] bg-fixed bg-hero1 bg-300 bg-semiCenter1 bg-no-repeat  mix-blend-normal;
 
   &_fadedbg {
     @apply h-[100dvh] w-full absolute bg-slate-900 bg-opacity-50 z-0;
