--- a/app/components/main/Main.css
+++ b/app/components/main/Main.css
@@ -7,9 +7,9 @@
 }
 
 .section {
-  @apply h-[100dvh];
+  @apply h-[100vh];
 
   &_fadedbg {
-    @apply h-[100dvh] w-full absolute bg-slate-900 bg-opacity-50 z-0;
+    @apply h-[100vh] w-full absolute bg-slate-900 bg-opacity-50 z-0;
   }
 }
