--- a/app/components/main/Main.css
+++ b/app/components/main/Main.css
@@ -7,9 +7,17 @@
 }
 
 .section {
-  @apply h-[100vh] bg-hero1 bg-cover bg-semiCenter1;
+  @apply h-[100vh] bg-hero1 bg-cover bg-semiCenter;
 
   &_fadedbg {
     @apply h-[100vh] w-full absolute bg-slate-900 bg-opacity-50 z-0;
+  }
+}
+
+.images-section {
+  @apply bg-gradient-to-r from-[rgba(161,114,103,100%)] via-[rgba(139,99,89,51%)] to-[rgba(30,30,30,90%)] font-antic py-8 px-6;
+
+  &_h1 {
+    @apply text-center text-2xl [text-shadow:_0_6px_4px_rgba(255_255_255_/_50%)];
   }
 }
