--- a/app/components/button/Button.css
+++ b/app/components/button/Button.css
@@ -17,8 +17,13 @@
     @apply bg-white bg-opacity-10 text-black border-2 border-black 
     shadow-menuBtnBoxShadow;
   }
-  &_menu-btn_selected {
+  /* &_menu-btn_selected {
     @apply bg-white bg-opacity-10 text-black border-[3px] border-white 
     shadow-menuBtnBoxShadow;
-  }
+  } */
+}
+.link:focus,
+.link:hover {
+  @apply bg-white bg-opacity-10 text-black border-2 border-white 
+shadow-menuBtnBoxShadow transition-all duration-300 scale-105;
 }
