--- a/app/components/main/Main.css
+++ b/app/components/main/Main.css
@@ -13,6 +13,30 @@
   &_fadedbg {
     @apply h-[100vh] w-full absolute bg-slate-900 bg-opacity-50 z-0;
   }
+
+  &_background {
+    @apply h-full w-full object-cover opacity-50;
+  }
+
+  &_hero-header {
+    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-full bg-customGrey bg-opacity-60 w-4/5 text-center py-10 z-10 rounded-tr-md rounded-bl-md rounded-tl-[3rem] rounded-br-[3rem];
+  }
+
+  &_hero-header_h1 {
+    @apply font-americana uppercase text-5xl drop-shadow-heroShadow text-primary stroke;
+  }
+
+  &_hero-header_p {
+    @apply text-3xl mt-3 font-neon drop-shadow-heroShadow text-primary stroke1;
+  }
+
+  &_hero_cta {
+    @apply absolute top-3/4 left-1/2 -translate-x-1/2 -translate-y-1/2 flex flex-col w-4/5 gap-10 px-12;
+  }
+
+  &_arrows {
+    @apply absolute bottom-3 left-1/2 -translate-x-1/2;
+  }
 }
 
 .images-section {
