--- a/app/components/main/Main.css
+++ b/app/components/main/Main.css
@@ -11,7 +11,7 @@
   /* @apply h-[100vh] bg-hero1 bg-cover bg-semiCenter; */
 
   &_fadedbg {
-    @apply h-[100vh] w-full absolute bg-slate-900 bg-opacity-50 z-0;
+    @apply h-[100vh] w-full absolute bg-slate-900 bg-opacity-50 z-0 top-0;
   }
 
   &_background {
