--- a/app/components/button/Button.css
+++ b/app/components/button/Button.css
@@ -19,7 +19,8 @@
   }
 }
 .link:focus,
-.link:hover {
+.link:hover,
+.link:active {
   @apply bg-white bg-opacity-10 text-black border-2 border-white 
 shadow-menuBtnBoxShadow transition-all duration-300 scale-105;
 }
