--- a/app/components/header/Header.css
+++ b/app/components/header/Header.css
@@ -26,7 +26,7 @@
   }
 
   &_navbar_sidebar {
-    @apply bg-primary fixed top-0 right-0 bottom-0 w-3/5 flex justify-center items-center z-30;
+    @apply bg-primary opacity-90 fixed top-0 right-0 bottom-0 w-3/5 flex justify-center items-center z-30;
 
     &_close-button {
       @apply h-6 w-6 absolute top-5 left-5;
