--- a/app/components/main/Main.css
+++ b/app/components/main/Main.css
@@ -18,19 +18,19 @@
   }
 
   &_hero-header {
-    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-full bg-customGrey bg-opacity-60 w-4/5 text-center py-10 z-10 rounded-tr-md rounded-bl-md rounded-tl-[3rem] rounded-br-[3rem] sm:max-w-[70%] sm:mt-8;
+    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-full bg-customGrey bg-opacity-60 w-4/5 text-center py-10 z-10 rounded-tr-md rounded-bl-md rounded-tl-[3rem] rounded-br-[3rem] sm:max-w-[70%] sm:mt-8 md:mt-24 md:py-14;
   }
 
   &_hero-header_h1 {
-    @apply font-americana uppercase text-5xl drop-shadow-heroShadow text-primary stroke sm:text-6xl;
+    @apply font-americana uppercase text-5xl drop-shadow-heroShadow text-primary stroke sm:text-6xl md:text-8xl;
   }
 
   &_hero-header_p {
-    @apply text-3xl mt-3 font-neon drop-shadow-heroShadow text-primary stroke1 sm:text-4xl;
+    @apply text-3xl mt-3 font-neon drop-shadow-heroShadow text-primary stroke1 sm:text-4xl md:text-5xl;
   }
 
   &_hero_cta {
-    @apply absolute top-3/4 left-1/2 -translate-x-1/2 -translate-y-1/2 flex flex-col w-4/5 gap-10 px-12 sm:flex-row sm:w-4/5 sm:justify-between;
+    @apply absolute top-3/4 left-1/2 -translate-x-1/2 -translate-y-1/2 flex flex-col w-4/5 gap-10 px-12 sm:flex-row sm:w-4/5 sm:justify-between md:w-[65%] md:mt-8;
   }
 
   &_arrows {
