--- a/app/components/footer/Footer.css
+++ b/app/components/footer/Footer.css
@@ -1,12 +1,12 @@
 .footer {
-  @apply bg-footerBg bg-cover py-8 relative;
+  @apply bg-footerBg bg-cover;
 
   &_container {
-    @apply absolute top-0 bottom-0 left-0 right-0 blur-2xl bg-slate-900 bg-opacity-50 z-0;
+    @apply h-full w-full bg-slate-900 bg-opacity-60 md:flex md:flex-row;
   }
 
   &_content {
-    @apply grid grid-cols-1 h-full w-[90%] mx-auto my-auto gap-6;
+    @apply grid grid-cols-1 h-full w-[90%] mx-auto my-auto gap-6 py-8 md:w-auto;
 
     &_social {
       @apply flex gap-8 justify-center z-10;
@@ -17,7 +17,7 @@
     }
 
     &_policy-copyright {
-      @apply z-10 flex flex-col justify-between gap-2 text-tertiary text-center font-antic sm:flex-row sm:gap-8;
+      @apply z-10 flex flex-col justify-center gap-2 text-tertiary text-center font-antic sm:flex-row sm:gap-8 md:pl-16;
     }
   }
 }
