--- a/app/components/footer/Footer.css
+++ b/app/components/footer/Footer.css
@@ -6,7 +6,7 @@
   }
 
   &_content {
-    @apply grid grid-cols-1 h-full w-[90%] mx-auto my-auto gap-6 py-8 md:w-auto;
+    @apply grid grid-cols-1 h-full w-auto mx-auto my-auto gap-6 py-8;
 
     &_social {
       @apply flex gap-8 justify-center z-10;
