--- a/app/components/footer/Footer.css
+++ b/app/components/footer/Footer.css
@@ -2,7 +2,7 @@
   @apply bg-footerBg bg-cover;
 
   &_container {
-    @apply h-full w-full bg-slate-900 bg-opacity-60 md:flex md:flex-row;
+    @apply h-full w-full bg-slate-900 bg-opacity-60 md:flex md:flex-row md:gap-10;
   }
 
   &_content {
