--- a/app/components/footer/Footer.css
+++ b/app/components/footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  @apply bg-footerBg bg-cover;
+  @apply bg-footerBg bg-cover bg-center;
 
   &_container {
     @apply h-full w-full bg-slate-900 bg-opacity-60 md:flex md:flex-row md:gap-10;
@@ -13,7 +13,7 @@
     }
 
     &_directions-address {
-      @apply z-10 flex flex-col gap-2 sm:flex-row sm:gap-8 sm:justify-center sm:pr-32;
+      @apply z-10 flex flex-col gap-2 sm:flex-row sm:gap-8 sm:justify-center sm:pr-32 xl:pr-40;
     }
 
     &_policy-copyright {
