desktop1440 - modal animated

--- a/app/components/header/Header.css
+++ b/app/components/header/Header.css
@@ -5,7 +5,7 @@
     @apply w-4/5 flex justify-between items-center mx-auto xl:w-[75%];
 
     &_logo {
-      @apply h-12 w-12 relative;
+      @apply h-12 w-12 relative xl:w-16 xl:h-16;
 
       &_image {
         @apply w-full object-contain rounded-full;
