--- a/app/components/storia/Storia.css
+++ b/app/components/storia/Storia.css
@@ -1,5 +1,5 @@
 .storia_container {
-  @apply w-4/5 mx-auto text-center flex flex-col gap-6 py-6;
+  @apply w-4/5 mx-auto text-center flex flex-col gap-6 py-6 xl:gap-10 xl:py-10;
 }
 
 .about-us__img-container {
