--- a/app/components/footer/Footer.css
+++ b/app/components/footer/Footer.css
@@ -13,11 +13,23 @@
     }
 
     &_directions-address {
-      @apply z-10 flex flex-col gap-2 sm:flex-row sm:gap-8 sm:justify-center sm:pr-32 xl:pr-40;
+      @apply z-10 flex flex-col !gap-[1.5rem] sm:flex-row sm:gap-8 sm:justify-center sm:pr-32 xl:pr-40;
     }
 
     &_policy-copyright {
       @apply z-10 flex flex-col justify-center gap-2 text-tertiary text-center font-antic sm:flex-row sm:gap-8 md:pl-16;
+
+      p {
+        @apply border-b-[1px] border-b-tertiary pb-1 border-opacity-50 xl:text-lg;
+      }
     }
+  }
+
+  &_left-part-desktop {
+    @apply hidden md:w-[216px] md:bg-[#20201F] md:flex md:flex-col md:justify-center md:items-center md:gap-8 xl:w-[240px];
+  }
+
+  &_address-phone {
+    @apply text-tertiary text-center font-antic xl:text-lg;
   }
 }
