--- a/app/components/header/Header.css
+++ b/app/components/header/Header.css
@@ -40,4 +40,12 @@
       @apply font-antic flex flex-col gap-16 text-center text-lg;
     }
   }
+
+  nav ul {
+    @apply md:flex gap-10 text-xl font-antic text-form hidden xl:text-2xl;
+
+    li {
+      @apply lg:pt-0;
+    }
+  }
 }
