--- a/app/components/menu/Menu.css
+++ b/app/components/menu/Menu.css
@@ -7,5 +7,5 @@
 }
 
 .modal-bg {
-  @apply lg:py-8 lg:absolute lg:flex lg:items-center lg:justify-center lg:top-0  lg:left-0 lg:right-0 lg:bg-slate-600 z-50;
+  @apply lg:py-8 lg:absolute lg:flex lg:items-center lg:justify-center lg:top-0  lg:left-0 lg:right-0 bg-gradient-to-r from-secondary to-slate-600 z-50;
 }
